package com.ovaltrack.backend.event.domain;

public enum EventCategory {
    ATTACK,
    DEFENSE,
    NEUTRAL
}
