package com.ovaltrack.backend.event.domain;

public enum EventPossession {
    OWN,
    OPPONENT,
    NEUTRAL
}
