package com.ovaltrack.backend.user.domain;

public enum UserRole {
    ADMIN_OVALTRACK,
    ADMIN_CLUB,
    COACH_ANALYST,
    PLAYER,
    NO_ROLE
}
