@startuml UML_Ovaltrack

title Modelo de Dominio — OvalTrack

' ========================================================
' ESTILOS PROFESIONALES (THEMING)
' ========================================================
skinparam DefaultFontName Arial
skinparam DefaultFontSize 12
skinparam Shadowing false
skinparam RoundCorner 6
skinparam ClassAttributeIconSize 0
skinparam PackageStyle rectangle
skinparam nodesep 55
skinparam ranksep 70
skinparam ArrowFontSize 11
skinparam ArrowFontColor #495057
skinparam ArrowThickness 1.2
skinparam Padding 3
skinparam linetype ortho

skinparam title {
    FontSize 20
    FontColor #2C3E50
    FontStyle bold
}

' Nota: 'linetype ortho' funciona bien ahora porque el modelo está
' "decluttered" (sin flechas redundantes hacia enums, solo relaciones
' reales). Con el diagrama original de 16 relaciones, ortho generaba
' líneas larguísimas que se salían del lienzo; con el grafo simplificado
' cada relación consigue su propio canal en ángulo recto.

skinparam class {
    BackgroundColor #F8F9FA
    ArrowColor #2C3E50
    BorderColor #2C3E50
    HeaderBackgroundColor #DEE2E6
    FontSize 12
    AttributeFontSize 11
    AttributeFontColor #343A40
}

skinparam enum {
    BackgroundColor #E9ECEF
    BorderColor #ADB5BD
    FontSize 11
}

skinparam package {
    BackgroundColor #FFFFFF
    BorderColor #ADB5BD
    FontColor #495057
    FontStyle bold
    Shadowing false
}

' ========================================================
' PAQUETES Y CLASES
' ========================================================
package "event" {
    enum EventPossession {
        OWN
        OPPONENT
        NEUTRAL
    }

    enum EventCategory {
        ATTACK
        DEFENSE
        NEUTRAL
    }

    class EventType {
        - UUID id
        - String name
        - String groupName
        - EventCategory category
        - Boolean affectsPossession
        - Boolean isScoring
        - Integer points
        - Boolean requiresPlayer
        - Map<String, Object> metadata
        - LocalDateTime createdAt
        - Boolean active
    }

    class Event {
        - UUID id
        - EventType eventType
        - Match match
        - Person player
        - EventPossession teamPossession
        - Integer matchTime
        - LocalDateTime realTime
        - Integer period
        - String origin
        - Map<String, Object> attributes
        - LocalDateTime createdAt
        - LocalDateTime synchronizedAt
    }

    Event "0..*" --> "1" EventType : eventType
}

package "match" {
    enum MatchStatus {
        NOT_STARTED
        IN_PROGRESS
        FINISHED
    }

    class Match {
        - UUID id
        - LocalDateTime date
        - Division division
        - String opponent
        - MatchStatus status
    }
}

package "division" {
    enum AgeCategory {
        U14
        U15
        U16
        U18
        U20
        SENIOR
        VETERAN
    }

    enum Gender {
        MALE
        FEMALE
        MIXED
    }

    class Division {
        - UUID id
        - String name
        - Club club
        - LocalDateTime createdAt
        - AgeCategory ageCategory
        - Gender gender
        - Boolean active
    }

    class DivisionPlayer {
        - UUID id
        - Person person
        - Division division
        - Integer jerseyNumber
        - String position
        - LocalDate startDate
        - LocalDate endDate
    }

    class DivisionCoach {
        - UUID id
        - Person person
        - Division division
        - LocalDate startDate
        - LocalDate endDate
    }

    DivisionPlayer "0..*" --> "1" Division : division
    DivisionCoach "0..*" --> "1" Division : division
}

package "club" {
    enum ClubStatus {
        REJECTED
        ACTIVE
        PENDING
    }

    class Club {
        - UUID id
        - String name
        - LocalDateTime createdAt
        - ClubStatus status
        - User adminUser
        - String city
        - String logoUrl
        - String contactEmail
        - String contactPhone
    }
}

package "person" {
    class Person {
        - UUID id
        - Club club
        - String firstName
        - String lastName
        - LocalDate birthDate
        - String contactEmail
        - String contactPhone
        - LocalDateTime createdAt
    }
}

package "user" {
    enum UserRole {
        ADMIN_OVALTRACK
        ADMIN_CLUB
        COACH_ANALYST
        PLAYER
        NO_ROLE
    }

    class User {
        - UUID id
        - Person person
        - String loginEmail
        - String passwordHash
        - UserRole role
        - Boolean active
        - LocalDateTime createdAt
    }

    ' Toda cuenta (User) representa exactamente una Persona.
    ' No toda Persona tiene una cuenta (ej: jugador menor o sin acceso digital).
    User "0..1" --> "1" Person : person
}

' ========================================================
' RELACIONES ENTRE ENTIDADES — Columna vertebral y Pertenencia
' ========================================================
Event "0..*" -down-> "1" Match : match
Match "0..*" -down-> "1" Division : division
Division "0..*" -down-> "1" Club : club
Club "0..*" -down-> "0..1" User : adminUser
Person "0..*" -up-> "0..1" Club : club

' ========================================================
' ASIGNACIONES DEPORTIVAS Y REFERENCIAS A PERSON
' ========================================================
DivisionPlayer ..> Person : person
DivisionCoach ..> Person : person
Event ..> Person : player

legend right
  |= Línea |= Significado |
  |  <color:#2C3E50>━━━━━</color> | Relación estructural / pertenencia institucional |
  |  <color:#2C3E50>┅┅┅┅┅</color> | Asignación deportiva / referencia directa a Person |
endlegend

@enduml
